1.5.0:
	-updated for StardewValley 1.4
	-added Japanese translation (thanks to pomepome)

1.5.1:
	-added Chinese translation (thanks to Redlnn)
	-added configuration option (true by default) that lights the
	fireplace in the first night on the farm

1.5.2:
	-updated Italian translation (thanks to S-zombie)
	-added Korean translation (thanks to overwritten)
	-added Hungarian translation (thanks to Annosz)
	-added French translation (thanks to mael-belval)
	-added Turkish translation (thanks to BURAKMESE)
