@@ -8,6 +8,7 @@
 	fireplace in the first night on the farm
 
 1.5.2:
+	-updated for Android compatibility (thanks to Logofe)
 	-updated Italian translation (thanks to S-zombie)
 	-added Korean translation (thanks to overwritten)
 	-added Hungarian translation (thanks to Annosz)
